Fix header spacing.

--- a/css/style.css
+++ b/css/style.css
@@ -285,15 +285,15 @@ body {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
   font-weight: 700;
-  margin: 20px auto;
-  font-size: 80px;
+  margin: 40px auto;
+  font-size: 70px;
 }
 
 .header h2 {
   font-family: 'Open Sans', sans-serif;
   font-style: italic;
   font-weight: 300;
-  margin: 20px 0;
+  margin: 40px 0 60px 0;
   font-size: 40px;
 }
 
